# Hiqonis

./: .env.example  .gitignore  .npmrc  .pylintrc  README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md  config.py  main.py  pyproject.toml
apps/api/api/: deps.py
apps/api/api/v1/: auth.py  conversations.py  onboarding.py  router.py
apps/docs/: architecture.md  getting-started.md
apps/web/messages/: en.json  id.json
apps/web/src/: middleware.ts
apps/worker/: pyproject.toml
docs/adr/: ADR-001_Tech_Stack_Selection.md  ADR-002_Architecture_Pattern_Selection.md
docs/api/: openapi_v1.yaml
infra/compose/: litellm_config.yaml  pgbouncer.ini  prometheus.yml  userlist.txt
infra/scripts/: backup_db.sh
libs/agents/: pyproject.toml
libs/agents/appointment_agent/: agent.py
libs/agents/chat_agent/: agent.py
libs/agents/crm_agent/: agent.py
libs/agents/guardrails/: injection_shield.py
libs/agents/invoice_agent/: agent.py
libs/common/: pyproject.toml
libs/common/auth/: jwt.py  security.py
libs/core/: pyproject.toml
libs/core/conversation/: analytics.py  broadcast.py  follow_up.py  (+1 more)
libs/infrastructure/: pyproject.toml
libs/integrations/: channel_adapter.py  pyproject.toml
tests/integration/: test_analytics_flow.py  test_auth_flow.py  test_crm_automation_agents.py  test_crm_flow.py  test_deferred_integrations.py  test_enterprise_features.py  test_rag_flow.py  test_routing_flow.py
tests/unit/: test_cache_service.py  test_injection_shield.py  test_skeleton.py
(+27 files in other folders)
