[project]
name = "api"
version = "0.1.0"
description = "Hiqonis FastAPI Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.6.4",
    "email-validator>=2.0.0",
    "asyncpg>=0.29.0",
    "python-socketio>=5.11.1",
    "redis>=5.0.3",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9"
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "black>=24.3.0",
    "ruff>=0.3.3",
    "mypy>=1.9.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0"
]
